# ccid-firmware-rs

./: .backup-beads.sh  .dockerignore  .gitignore  .gitmodules  ALIGNMENT.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  Cargo.toml  DEFMT_DIAGNOSIS.md  DETAILED_RESEARCH_REPORT.md  Dockerfile  EXTERNAL_RESEARCH_REQUEST.md  GEMALTO_KNOWN_GOOD_SUMMARY.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_COMPARISON.md  LEARNINGS.md  LICENSE  OPEN_RESEARCH_QUESTIONS.md  PINOUT.md  PINPAD-IMPLEMENTATION-PLAN.md  PROPOSED_ASYNC_ARCHITECTURE.md  PROTOCOL_SEEDKEEPER.md  PUBLICATION_READINESS.md  README.md  REPORT.md  RESEARCH.md  RESEARCH_AGENDA.md  RESEARCH_CONSOLIDATED.md  VERIFICATION.md  VOLTAGE_INVESTIGATION_PROMPT.md  build.rs  ccid_test_summary.txt  head  memory-f746.x  rust-toolchain.toml  test_gemalto_pysatochip.py  test_smartcard.py  (+1 more)
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/notepads/: task5-mock-pin-entry.md
.sisyphus/notepads/rust-ccid-reader/: learnings.md
ccid-protocol/src/: atr.rs  status.rs  types.rs
crates/card-interface/: Cargo.toml
crates/card-interface/src/: lib.rs
crates/ccid-core/: Cargo.toml
crates/ccid-core/src/: lib.rs
crates/ccid-protocol/: Cargo.toml
crates/ccid-protocol/src/: lib.rs  types.rs
crates/ccid-transport-serial/: Cargo.toml
crates/ccid-transport-serial/src/: lib.rs
display-test/: Cargo.toml
display-test/.cargo/: config.toml
docs/: AUDIT_PLAN.md  BRANCH_CLEANUP.md  CCID_SPEC_AUDIT.md  CCID_SPEC_AUDIT_REPORT.md  CI_FAILURE_INCIDENT_REPORT.md  C_REFERENCE_AUDIT_REPORT.md  DESIGN_DECISIONS.md  LIBCCID_DRIVER_AUDIT_REPORT.md  MILESTONES-AUDIT.md  MILESTONES.md  PINPAD-ARCHITECTURE.md  SECURITY_AND_BOOTLOADER.md  SPECIFICATIONS.md  vendor-patches.md
esp32-ccid/: Cargo.toml  README.md  flash_and_test.sh  reader.conf  sdkconfig.defaults  sdkconfig.defaults.ble  setup.sh
esp32-ccid/.cargo/: config.toml
esp32-ccid/src/: ble_debug.rs  ble_logger.rs  ccid_handler.rs  ccid_types.rs  led.rs  lib.rs  main.rs  mfrc522_driver.rs  mfrc522_transceiver.rs  nfc.rs  pn532_driver.rs  serial_framing.rs
examples/: display_touch.rs
firmware/ccid-firmware/: Cargo.toml  memory.x
firmware/ccid-firmware/src/: ccid_core.rs  device_profile.rs  lib.rs  main.rs  mock_driver.rs  pps_fsm.rs  protocol_unit.rs  smartcard.rs  smartcard_bitbang.rs  smartcard_common.rs
firmware/esp32-ccid/: Cargo.toml  README.md  ble_debug_monitor.py  flash_and_test.sh  reader.conf  sdkconfig.defaults  setup.sh
firmware/esp32-ccid/src/: ccid_handler.rs  led.rs  main.rs  pn532_driver.rs
host-tools/: Cargo.toml
host-tools/examples/: list-readers.rs
host-tools/src/: lib.rs
host-tools/tests/: smoke.rs
scripts/: read_diag.py  verify-reproducibility.sh
src/: app_enum.rs  ccid.rs  ccid_core.rs  ccid_spec.rs  device_profile.rs  driver.rs  lib.rs  logging.rs  main.rs  main_nfc.rs  pcsc10.rs  pps_fsm.rs  protocol_unit.rs  smartcard.rs  smartcard_bitbang.rs  smartcard_common.rs  t1_engine.rs  usb_identity.rs
src/nfc/: mod.rs  pn532.rs  pn532_driver.rs
src/pinpad/: apdu.rs  mod.rs  state.rs  ui.rs
tests/: ccid_core_tests.rs  ccid_harness.rs  comprehensive_test.rs  integration_test.rs  replay_seedkeeper.rs
tests/captures/: capture_seedkeeper.py  firmware_session.json  seedkeeper_raw.json  seedkeeper_session.json
tests/hardware/: README.md  seedkeeper_non_destructive.py  sysmocom_sim_non_destructive.py  test_ccid_apdu.py  test_pinpad_descriptor.py  test_pinpad_entry.py  test_pinpad_hardware.py  test_seedkeeper.py
tests/soak/: README.md  run_all_soak_tests.py  run_soak_tests.sh  soak_01_smoke.py  soak_02_globalplatform.py  soak_03_satochip.py  soak_04_openpgp.py  soak_05_piv.py  soak_06_opensc.py  soak_07_gpg.py  soak_08_extended_apdu.py  soak_09_stress.py  soak_10_cross_compare.py  soak_11_cherry.py  soaklib.py
