[package]
name = "ccid-firmware-rs"
version = "0.0.8"
edition = "2021"
description = "USB CCID firmware for STM32 microcontrollers in Rust"
license = "GPL-2.0-or-later"
repository = "https://github.com/Amperstrand/ccid-firmware-rs"
readme = "README.md"
keywords = ["ccid", "usb", "smartcard", "stm32", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]

[[bin]]
name = "ccid-firmware"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "ccid-nfc"
path = "src/main_nfc.rs"
test = false
bench = false
required-features = ["nfc"]

[dependencies]

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
log = "0.4"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f4xx-hal = { git = "https://github.com/Amperstrand/stm32f4xx-hal", rev = "789e5e86f5d93ae80b2f50e861c3c76980733bca", features = ["stm32f469", "usb_fs", "framebuffer"] }
usb-device = "0.3"
embedded-alloc = "0.5"
stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc.git", branch = "sdio-support" }

[patch.crates-io]
synopsys-usb-otg = { path = "vendor/synopsys-usb-otg" }

[features]
# Default device profile
default = ["profile-cherry-smartterminal-st2xxx"]

# Device profile selection (mutually exclusive, pick one)
# Naming convention: profile-{vendor}-{product}-{model} (aligned with CCID project)
profile-cherry-smartterminal-st2xxx = []  # Cherry SmartTerminal ST-2xxx (PIN pad reader)
profile-gemalto-idbridge-ct30 = []        # Gemalto IDBridge CT30 (basic reader)
profile-gemalto-idbridge-k30 = []         # Gemalto IDBridge K30 (basic reader, no PIN pad!)

# NFC build variant: ESP32-S3 + PN532 contactless reader
# Use instead of (not alongside) STM32 contact-card profiles.
# See BUILDING.md for full NFC build instructions.
nfc = ["embedded-hal"]

# Optional features
display = ["embedded-graphics", "embedded-hal"]

[dependencies.embedded-graphics]
version = "0.8"
optional = true

[dependencies.embedded-hal]
version = "0.2"
optional = true

# ============================================================================
# Build Profiles
# ============================================================================
#
# debug = 2: Full DWARF debug info (needed for probe-rs RTT location info)
# opt-level = "z": Optimize for size (embedded target)
# lto = true: Link-time optimization for smaller binary
# codegen-units = 1: Better optimization (slower compile)
# panic = "abort": No unwinding (reduces binary size)
#
[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 2
opt-level = 1
