[package]
name = "ccid-firmware-rs"
version = "0.0.8"
edition = "2021"
description = "USB CCID firmware for STM32 microcontrollers in Rust"
license = "GPL-2.0-or-later"
repository = "https://github.com/Amperstrand/ccid-firmware-rs"
readme = "README.md"
keywords = ["ccid", "usb", "smartcard", "stm32", "embedded"]
categories = ["embedded", "hardware-support", "no-std"]

[workspace]
members = ["ccid-protocol", "esp32-ccid", "host-tools"]

[[bin]]
name = "ccid-firmware"
path = "src/main.rs"
test = false
bench = false

[dependencies]
ccid-protocol = { path = "ccid-protocol" }

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
log = "0.4"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f4xx-hal = { git = "https://github.com/Amperstrand/stm32f4xx-hal", rev = "789e5e86f5d93ae80b2f50e861c3c76980733bca", features = ["stm32f469", "usb_fs", "framebuffer"] }
usb-device = "0.3"
embedded-alloc = "0.5"
stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc.git", branch = "sdio-support" }

[patch.crates-io]
synopsys-usb-otg = { path = "vendor/synopsys-usb-otg" }

[features]
default = ["profile-cherry-smartterminal-st2xxx"]

profile-cherry-smartterminal-st2xxx = []
profile-gemalto-idbridge-ct30 = []
profile-gemalto-idbridge-k30 = []

display = ["embedded-graphics", "embedded-hal"]

[dependencies.embedded-graphics]
version = "0.8"
optional = true

[dependencies.embedded-hal]
version = "0.2"
optional = true

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# ESP32 workspace member needs opt-level "s" (size) instead of "z" because
# ESP-IDF build system expects it. Package-level profiles are ignored for
# workspace members, so the override lives here.
[profile.release.package.esp32-ccid]
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
