[workspace]
members = [
    "crates/ccid-protocol",
    "crates/card-interface",
    "crates/ccid-core",
    "crates/ccid-transport-serial",
    "firmware/ccid-firmware",
    "firmware/esp32-ccid",
    "host-tools",
]
default-members = ["firmware/ccid-firmware"]
resolver = "2"

[patch.crates-io]
synopsys-usb-otg = { path = "vendor/synopsys-usb-otg" }

[profile.release]
debug = 2
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.esp32-ccid]
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
