[package]
name = "display-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "display-test"
path = "src/main.rs"
test = false
bench = false

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f469i-disc = { git = "https://github.com/Amperstrand/stm32f469i-disc.git", branch = "sdio-support" }
embedded-graphics = "0.8"

[profile.release]
codegen-units = 1
debug = true
lto = true
