[package]
name = "esp32-ccid"
version = "0.1.0"
edition = "2021"
description = "ESP32 + PN532 CCID-over-serial firmware (GemPC Twin emulation)"
license = "GPL-2.0-or-later"

[[bin]]
name = "esp32-ccid"
path = "src/main.rs"

[lib]
name = "esp32_ccid"
path = "src/lib.rs"

[dependencies]
embedded-hal = "1.0"
pn532 = { version = "0.5.0", features = ["msb-spi"], default-features = false }

[target.'cfg(all(target_arch = "xtensa", target_os = "none"))'.dependencies]
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-hal = "0.43"

[build-dependencies]
embuild = { version = "0.31", features = ["espidf"] }

[profile.release]
opt-level = "s"
