[package]
name = "esp32-ccid"
version = "0.1.0"
edition = "2021"
description = "ESP32 + PN532 CCID-over-serial firmware (GemPC Twin emulation)"
license = "GPL-2.0-or-later"

[[bin]]
name = "esp32-ccid"
path = "src/main.rs"

[lib]
name = "esp32_ccid"
path = "src/lib.rs"

[features]
default = ["backend-mfrc522"]
backend-mfrc522 = ["dep:mfrc522", "dep:iso14443"]
backend-pn532 = ["dep:pn532"]

[dependencies]
ccid-protocol = { path = "../ccid-protocol" }
embedded-hal = "1.0"
heapless = "0.8"
log = "0.4"
nb = "1.1"
mfrc522 = { path = "../vendor/mfrc522", optional = true }
iso14443 = { path = "../vendor/iso14443-rs", features = ["alloc"], optional = true }
pn532 = { version = "0.5.0", features = ["msb-spi"], default-features = false, optional = true }

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-sys = { version = "0.37", features = ["binstart"] }
esp-idf-hal = "0.46"
esp-idf-svc = "0.52.1"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_version = "tag:v5.2.4"

[profile.release]
opt-level = "s"
